import java.io.File;
import java.util.ArrayList;
import java.util.List;

public class Configurator {

    public static List<Process> getProcesses(File file){
        return new ArrayList<>(0);
    }
}
