@startuml

title __SRC's Class Diagram__\n

  package  {
    class CommandManager {
        ~ input : Scanner
        + CommandManager()
        + getNextCommand()
    }
  }
  

  package  {
    class Configurator {
        {static} + getProcesses()
    }
  }
  

  package  {
    class Driver {
        ~ processes : List<Process>
        + run()
        - setup()
    }
  }
  

  package  {
    class Main {
        {static} + main()
    }
  }
  

  package  {
    class MemoryManager {
        ~ memory : Page[]
        ~ lock : Semaphore
        ~ MemoryManager()
        + store()
        + release()
        + lookup()
    }
  }
  

  package  {
    class Page {
        - variableId : Integer
        + Page()
        + Page()
        + getVariableId()
        + setVariableID()
        + getVariable()
        + setVariable()
    }
  }
  

  package  {
    class Process {
        - id : int
        - enterTime : int
        - duration : int
        - counter : int
        - lock : Object
        - paused : boolean
        - writer : BufferedWriter
        - thread : Thread
        + Process()
        + getId()
        + setId()
        + getEnterTime()
        + setEnterTime()
        + getDuration()
        + setDuration()
        + getCounter()
        + setCounter()
        + getWriter()
        + setWriter()
        - finish()
        + start()
        + check()
        - increment()
        - print()
        + equals()
        + hashCode()
    }
  }
  

  package  {
    class Variable {
        ~ value : Integer
        ~ lastAccess : Instant
        + Variable()
        + getValue()
        + setValue()
        + getLastAccess()
    }
  }
  

  Driver -up-|> Runnable
  Driver o-- CommandManager : commandManager
  Page o-- Variable : variable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
